--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carbon/icons-react": "^10.8.2",
+    "@carbon/themes": "^10.9.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "carbon-components": "^10.9.3",
+    "carbon-components-react": "^7.9.3",
     "gh-pages": "^2.2.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-typing-effect": "^2.0.3"
+    "react-typing-effect": "^2.0.3",
+    "styled-components": "^5.0.1"
   },
   "homepage": "https://newJSHacker.github.io/react-portfolio",
   "scripts": {
