--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.0.1"
   },
-  "homepage": "https://newJSHacker.github.io/react-portfolio",
+  "homepage": "http://newJSHacker.github.io/react-portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
