--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "my-portfolio-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "homepage": "http://newjshacker.github.io/react-portfolio",
   "dependencies": {
     "@carbon/icons-react": "^10.8.2",
     "@carbon/themes": "^10.9.3",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "carbon-components": "^10.9.3",
     "carbon-components-react": "^7.9.3",
     "gh-pages": "^2.2.0",
@@ -19,7 +18,6 @@
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.0.1"
   },
-  "homepage": "http://newJSHacker.github.io/react-portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
